--- a/BookLambProject/Views/Shared/_Layout.cshtml
+++ b/BookLambProject/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Index">Shopping Cart</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Index"> 🛒 Shopping Cart</a>
                         </li>
                     </ul>
                 </div>
