--- a/BookLambProject/Views/Shared/_Layout.cshtml
+++ b/BookLambProject/Views/Shared/_Layout.cshtml
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.12);">
+            <div class="container-fluid" >
                 <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">
-                    <img src="../Images/logo.png" style="height:95px;" />
+                    <img src="../../Images/logo.png" style="height:95px;" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">
-                            <img src="../Images/name.png" style="height:40px;" />
+                            <img src="../../Images/name.png" style="height:40px;" />
                             </a>
                             
                         </li>
