--- a/BookLambProject/Views/Books/Details.cshtml
+++ b/BookLambProject/Views/Books/Details.cshtml
@@ -1,16 +1,34 @@
 ﻿@model BookLambProject.Models.Book
 
+
 @{
     ViewData["Title"] = "Details";
 }
+<style>
+    h1 {
+        text-align: center;
+        font-family: 'Inria Sans';
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.59);
+    }
 
-<h1>Details</h1>
+</style>
+
+
+
+<h1>DETAILS</h1>
 
 <div>
-    <h4>Book</h4>
+    
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row" >
+        
+        <dt class="col-sm-2" >
+            <img src=../../Images/@Html.DisplayFor(model => model.ImagePath) style="width:210px;height:297px;">
+        </dt>
+        <dd class="col-sm-10">
+            
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
@@ -28,12 +46,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
+       
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
         </dt>
@@ -56,11 +69,10 @@
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Price)TL
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
