--- a/BookLambProject/Views/Books/Index.cshtml
+++ b/BookLambProject/Views/Books/Index.cshtml
@@ -9,6 +9,7 @@
         margin-bottom: 100px;
         margin-top: 35px;
         font-family: 'Inria Sans';
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.59);
     }
 
     
@@ -62,7 +63,7 @@
 
 
                             <div>
-                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
+                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary" >Details</a>
                                 <a asp-controller="ShoppingCart" asp-action="AddToCart" asp-route-bookId="@item.Id" class="btn btn-primary" >Add to Cart</a>
                             </div>
                         </td>
