--- a/BookLambProject/wwwroot/css/site.css
+++ b/BookLambProject/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+  font-family: 'Inria Sans';
 }
 
 @media (min-width: 768px) {
@@ -14,5 +15,17 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: linear-gradient(180deg, rgba(155, 28, 255, 0.00) 46.88%, rgba(117, 0, 208, 0.17) 88.02%);
 }
+
+.btn-primary{
+    background-color:orchid;
+    border-color:orchid;
+
+}
+
+    .btn-primary:hover {
+        background-color: mediumorchid;
+        border-color: orchid;
+    }
