--- a/BookLambProject/Views/Users/Create.cshtml
+++ b/BookLambProject/Views/Users/Create.cshtml
@@ -4,21 +4,21 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>CREATE USER</h1>
 
-<h4>User</h4>
+<h4>Enter Your Informations</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
+                <label asp-for="UserName" class="control-label">User Mail</label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserPassword" class="control-label"></label>
+                <label asp-for="UserPassword" class="control-label">User Password</label>
                 <input asp-for="UserPassword" class="form-control" />
                 <span asp-validation-for="UserPassword" class="text-danger"></span>
             </div>
