--- a/BookLambProject/Views/Books/Index.cshtml
+++ b/BookLambProject/Views/Books/Index.cshtml
@@ -49,7 +49,7 @@
                         var item = items[i + j];
                         <td>
                             <div>
-                                <img src=../Images/@Html.DisplayFor(modelItem => item.ImagePath) style="width:210px;height:297px;">
+                                <img class="bookimg" src=../Images/@Html.DisplayFor(modelItem => item.ImagePath) style="width:210px;height:297px;">
                             </div>
                             <div>
                                 <strong>Title:</strong> @Html.DisplayFor(modelItem => item.Title)
