--- a/BookLambProject/Views/Shared/_Layout.cshtml
+++ b/BookLambProject/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         </li>
                        
                        
-                        @if (ViewBag.IsUserAuthenticated)
+                        @if (ViewBag.IsUserAuthenticated) //If we logged in or not
                         {
                             
                             <li class="nav-item">
