--- a/BookLambProject/Views/Books/Details.cshtml
+++ b/BookLambProject/Views/Books/Details.cshtml
@@ -23,12 +23,12 @@
     <dl class="row" >
         
         <dt class="col-sm-2" >
-            <img src=../../Images/@Html.DisplayFor(model => model.ImagePath) style="width:210px;height:297px;">
+            <img class="detailsimg" src=../../Images/@Html.DisplayFor(model => model.ImagePath) style="width:210px;height:297px;">
         </dt>
         <dd class="col-sm-10">
             
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-2" >
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
