--- a/BookLambProject/Views/ShoppingCart/Delete.cshtml
+++ b/BookLambProject/Views/ShoppingCart/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Are you sure you want to discard this book?</h3>
 <div>
-    <h4>ShoppingCart</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Book)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Book.Id)
+            @Html.DisplayFor(model => model.Book.Title)
         </dd>
     </dl>
     
