--- a/BookLambProject/Views/Users/Create.cshtml
+++ b/BookLambProject/Views/Users/Create.cshtml
@@ -25,6 +25,9 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <div>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Back</a>
+            </div>
         </form>
     </div>
 </div>
