--- a/BookLambProject/Views/Admin/Index.cshtml
+++ b/BookLambProject/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>ADMIN PANEL</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New Book</a>
 </p>
 <table class="table">
     <thead>
